fixed some of the issues

--- a/src/index.html
+++ b/src/index.html
@@ -26,60 +26,55 @@
         >
       </a>
 
-      <div class="header__img">
-        <img
-          src="/images/header-img.png"
-          alt="the entrance of the museum"
-          class="header__img"
-        >
-      </div>
-
       <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
       <div class="header__link">
         <a href="#events" class="header__link-tickets">КВИТКИ</a>
+        <a href="#events" class="header__link-button"></a>
       </div>
     </header>
     <!-- #endregion -->
     <!-- #region aside menu -->
     <aside class="menu page__menu" id="menu">
-      <a class="icon icon--close" href="#header"></a>
+      <div class="menu__wrap">
+        <a class="icon icon--close" href="#header"></a>
 
-      <div class="menu__content">
-        <nav class="nav menu__nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#gallery" class="nav__link">Галерея</a>
-            </li>
+        <div class="menu__content">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
 
-            <li class="nav__item">
-              <a href="#subscription" class="nav__link">Про Нас</a>
-            </li>
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link">Про Нас</a>
+              </li>
 
-            <li class="nav__item">
-              <a href="#events" class="nav__link">Виставки та події</a>
-            </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">Виставки та<br> події</a>
+              </li>
 
-            <li class="nav__item">
-              <a href="#contacts" class="nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
 
-        <div class="menu__info info">
-          <h4 class="info--title">Графік роботи</h4>
-          <p class="info--schedule">
-            <strong>12:00 — 20:00</strong> середа<br>
-            <strong>12:00 — 20:00</strong> четвер<br>
-            <strong>12:00 — 20:00</strong> п’ятниця<br>
-            <strong>11:00 — 19:00</strong> субота<br>
-            <strong>11:00 — 19:00</strong> неділя<br>
-          </p>
+          <div class="menu__info info">
+            <h4 class="info--title">Графік роботи</h4>
+            <p class="info--schedule">
+              <strong>12:00 — 20:00</strong> середа<br>
+              <strong>12:00 — 20:00</strong> четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя<br>
+            </p>
 
-          <p class="info--addition">
-            <strong>Вихідні:</strong> понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину до закриття музею
-          </p>
+            <p class="info--addition">
+              <strong>Вихідні:</strong> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
         </div>
       </div>
     </aside>
