fixed almost all mistakes

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
         <a href="#events" class="header__link-tickets">КВИТКИ</a>
         <a href="#events" class="header__link-button"></a>
       </div>
+
+      <div class="header__event">
+        <p class="header__event--element">ПОДІЇ</p>
+      </div>
     </header>
     <!-- #endregion -->
     <!-- #region aside menu -->
@@ -174,6 +178,13 @@
               alt="people in the sea colored in red and orange tones"
             >
           </div>
+
+          <div class="gallery__dots">
+            <img
+              src="/images/dots.png"
+              alt="dots for scroll"
+            >
+          </div>
         </section>
       </div>
       <!-- #endregion -->
@@ -262,12 +273,37 @@
 
         <div class="footer__info--contacts contacts" id="contacts">
           <h4 class="contacts--title">Контакти:</h4>
-          <p class="contacts--schedule">
-            вул. М. Грушевського, 6; Київ, 01001<br>
-            тел. +38 (044) 278-13-57<br>
-            факс +38 (044) 278-74-54<br>
-            e-mail: info@namu.kiev.ua
-          </p>
+          <div class="contacts--schedule">
+            <a
+              class="contacts--schedule__link"
+              target="_blank"
+              href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+Ukraine,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwio_qCpq4yBAxX8GhAIHVtuBVYQ8gF6BAgREAA&ved=2ahUKEwio_qCpq4yBAxX8GhAIHVtuBVYQ8gF6BAgUEAI">
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br>
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="contacts--schedule__link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+            <br>
+            <a
+              class="contacts--schedule__link"
+              href="tel:+38 (044) 278-74-54"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+            <br>
+            <a
+              class="contacts--schedule__link"
+              href="mailto:info@namu.kiev.ua"
+              target="_blank"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+
+          </div>
         </div>
 
         <a href="#header" class="footer__info--link">↑</a>
