--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
     <!-- #region header -->
     <header class="header" id="header">
+      <div class="header__top"></div>
       <a href="#menu" class="icon icon--menu"></a>
 
       <a href="#header" class="header__logo">
@@ -25,6 +26,7 @@
           class="logo--img"
         >
       </a>
+
 
       <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
@@ -36,6 +38,8 @@
       <div class="header__event">
         <p class="header__event--element">ПОДІЇ</p>
       </div>
+
+      <div class="header__img"></div>
     </header>
     <!-- #endregion -->
     <!-- #region aside menu -->
