moved logo to the left side, fixed problem with reloading page after submiting form, removed default input autofill styles

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
         </div>
-        <form class="subscribe__email-wrapper">
+        <form class="subscribe__email-wrapper" id="formId">
           <input
             class="subscribe__email"
             id="email"
@@ -196,7 +196,7 @@
             placeholder="E-mail"
             required
           >
-          <div class="subscribe__email-btn-wrapper" id="submitBtn">
+          <div class="subscribe__email-btn-wrapper">
             <button class="subscribe__email-btn"></button>
             <a class="subscribe__email-btn-arrow"></a>
           </div>
