--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,53 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page">
+    <header class="header container">
+
+      <div class="header__menu">
+        <a href="#menu" class="icon icon__menu"></a>
+      </div>
+
+      <div class="header__bg-img">
+        <div class="header__logo">
+          NA<br>MU
+        </div>
+      </div>
+
+      <div class="header__content">
+        <h1 class="header__title">
+          ХУДОЖНІЙ<br>МУЗЕЙ
+        </h1>
+
+        <div>
+          <a href="#"></a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="aside">
+      <div class="container">
+
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+
+      </div>
+    </footer>
   </body>
 </html>
