--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300,400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" >
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300,400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
@@ -115,8 +115,8 @@
                 >
               </a>
               <div class="event__text">
-                <span class="event__info">ВИСТАВКА</span>
-                <span class="event__date">26.08-29.11.2019</span>
+                <span class="event__info event__lecture-info">ВИСТАВКА</span>
+                <span class="event__date event__lecture-date">26.08-29.11.2019</span>
                 <div class="event__title">
                   <p class="event__titl">Йду і повертаюсь</p>
                   <img src="images/cub.svg" alt="cub">
@@ -133,8 +133,8 @@
                 >
               </a>
               <div class="event__text">
-                <span class="event__info">ВИСТАВКА</span>
-                <span class="event__date">26.08-29.11.2019</span>
+                <span class="event__info event__lecture-info">ВИСТАВКА</span>
+                <span class="event__date event__lecture-date">26.08-29.11.2019</span>
                 <div class="event__title">
                   <p class="event__titl">І спогади і мрії</p>
                   <img src="images/cub.svg" alt="cub">
@@ -226,7 +226,7 @@
               <div class="subscribe__text-wrapper">
                 <div class="subscribe-text">
                   <p class="subscribe-title">Підписка</p>
-                  <p class="subscribe-desc">Від класицизму до романтизму</p>
+                  <p class="subscribe-desc">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
                   <form
                     action="POST"
@@ -335,13 +335,13 @@
                   </li>
                   <li class="contacts__item">
                     <a
-                        href="#events" class="contacts__link">Виставки та  події</a>
+                        href="#events" class="contacts__link contacts__link-left">Виставки та  події</a>
                   </li>
                   <li class="contacts__item">
-                    <a href="#about_us" class="contacts__link">Про Нас</a>
+                    <a href="#about_us" class="contacts__link ">Про Нас</a>
                   </li>
                   <li class="contacts__item">
-                    <a href="#contacts" class="contacts__link">Контакти</a>
+                    <a href="#contacts" class="contacts__link contacts__link-left">Контакти</a>
                   </li>
                 </ul>
               </div>
