--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
               Графік роботи
             </a>
             <div class="menu__schedule-wrapper">
-              <p>
+              <p class="menu__schedule-wrapper-left">
                 <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  середа <br>
                 <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  четвер <br>
                 <span class="menu__schedule-wrapper-bold">12:00 — 20:00</span>  п’ятниця <br>
@@ -266,8 +266,8 @@
                   >
                 </a>
                 <div class="contacts__icons">
-                  <a href="https://www.instagram.com/namu.museum/" class="contacts__insta icon icon--instagram"></a>
                   <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="contacts__facebook icon icon--facebook"></a>
+                  <a href="https://www.instagram.com/namu.museum/" class="contacts__insta icon icon--instagram"></a>
                 </div>
               </div>
 
@@ -284,7 +284,7 @@
                 </p>
 
                 <p>
-                  <span class="menu__schedule-wrapper-bold"> Вихідні</span>: понеділок, <br>
+                  <span class="menu__schedule-wrapper-bold-title"> Вихідні</span>: понеділок, <br>
                        вівторок <br>
                       Каса припиняє роботу за <br>
                       1 годину до закриття <br>
@@ -335,10 +335,10 @@
                   </li>
                   <li class="contacts__item">
                     <a
-                        href="#events" class="contacts__link contacts__link-left">Виставки та  події</a>
+                        href="#events" class="contacts__link contacts__link-left">Про Нас</a>
                   </li>
                   <li class="contacts__item">
-                    <a href="#about_us" class="contacts__link ">Про Нас</a>
+                    <a href="#about_us" class="contacts__link ">Виставки та  події</a>
                   </li>
                   <li class="contacts__item">
                     <a href="#contacts" class="contacts__link contacts__link-left">Контакти</a>
