fixed html code style problem

--- a/src/index.html
+++ b/src/index.html
@@ -62,14 +62,32 @@
           <p class="footer-info-text">Графік роботи</p>
           <div class="menu-schedule-wrapper">
             <div class="menu-schedule">
-              <p class="footer-time">12:00 - 20:00 <span class="menu-text-light">середа</span></p>
-              <p class="footer-time">12:00 - 20:00 <span class="menu-text-light">четвер</span></p>
-              <p class="footer-time">12:00 - 20:00 <span class="menu-text-light">п'ятниця</span></p>
-              <p class="footer-time">12:00 - 19:00 <span class="menu-text-light">субота</span></p>
-              <p class="footer-time">12:00 - 19:00 <span class="menu-text-light">неділя</span></p>
+              <p class="footer-time">
+                <span class="menu-text-light">середа</span>
+                12:00 - 20:00
+              </p>
+              <p class="footer-time">
+                <span class="menu-text-light">четвер</span>
+                12:00 - 20:00
+              </p>
+              <p class="footer-time">
+                <span class="menu-text-light">п'ятниця</span>
+                12:00 - 20:00
+              </p>
+              <p class="footer-time">
+                <span class="menu-text-light">субота</span>
+                12:00 - 19:00
+              </p>
+              <p class="footer-time">
+                <span class="menu-text-light">неділя</span>
+                12:00 - 19:00
+              </p>
             </div>
             <div class="footer__info-text-wrapper">
-              <p class="footer-info-text"><span class="menu-text-bold">Вихідні:</span> понеділок, вівторок.</p>
+              <p class="footer-info-text">
+                <span class="menu-text-bold">Вихідні:</span>
+                понеділок, вівторок.
+              </p>
               <p class="footer-info-text">Каса припиняє роботу за 1 годину до закриття музею</p>
             </div>
           </div>
@@ -83,9 +101,9 @@
           <article class="article">
             <a href="#" class="article__link">
               <img
-              src="./images/main/events-1.png"
-              alt="event img 1"
-              class="article__img"
+                src="./images/main/events-1.png"
+                alt="event img 1"
+                class="article__img"
               >
             </a>
             <div class="article-wrapper-bottom">
@@ -105,9 +123,9 @@
           <article class="article">
             <a href="#" class="article__link">
               <img
-              src="./images/main/events-2.png"
-              alt="event img 2"
-              class="article__img"
+                src="./images/main/events-2.png"
+                alt="event img 2"
+                class="article__img"
               >
             </a>
             <div class="article-wrapper-bottom">
@@ -128,9 +146,9 @@
           <article class="article article--wide">
             <a href="#" class="article__link article__link--bg">
               <img
-              src="./images/main/events-3.png"
-              alt="event img 3"
-              class="article__img"
+                src="./images/main/events-3.png"
+                alt="event img 3"
+                class="article__img"
               >
             </a>
             <div class="article__lecture-wrapper">
@@ -235,11 +253,26 @@
         <div class="footer__left">
           <p class="footer-info-text">Графік роботи</p>
           <div class="menu-schedule">
-            <p class="footer-time">12:00 - 20:00 <span class="menu-text-light">середа</span></p>
-            <p class="footer-time">12:00 - 20:00 <span class="menu-text-light">четвер</span></p>
-            <p class="footer-time">12:00 - 20:00 <span class="menu-text-light">п'ятниця</span></p>
-            <p class="footer-time">12:00 - 19:00 <span class="menu-text-light">субота</span></p>
-            <p class="footer-time">12:00 - 19:00 <span class="menu-text-light">неділя</span></p>
+            <p class="footer-time">
+              <span class="menu-text-light">середа</span>
+              12:00 - 20:00
+            </p>
+            <p class="footer-time">
+              <span class="menu-text-light">четвер</span>
+              12:00 - 20:00
+            </p>
+            <p class="footer-time">
+              <span class="menu-text-light">п'ятниця</span>
+              12:00 - 20:00
+            </p>
+            <p class="footer-time">
+              <span class="menu-text-light">субота</span>
+              12:00 - 19:00
+            </p>
+            <p class="footer-time">
+              <span class="menu-text-light">неділя</span>
+              12:00 - 19:00
+            </p>
           </div>
           <div class="footer-info-text-wrapper">
             <p class="footer-info-text">Вихідні понеділок, вівторок.</p>
