--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,340 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+
+    <!-- #region Header -->
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="header__menu top-bar">
+            <a href="#menu" class="icon icon--menu"></a>
+            <a href="#" class="header__logo">NA <br> MU</a>
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <div class="header__bottom--content">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__button">
+              <a href="#events" class="header__button--link">КВИТКИ<span class="header__button--elem"></span>
+              </a>
+            </div>
+            <div class="header__events">
+              <a href="#events" class="header__events--text">ПОДІЇ</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="header__bg">
+          <div class="header__image"></div>
+        </div>
+
+      </div>
+    </header>
+    <!-- #endregion Header -->
+
+    <!-- #region Menu -->
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="top-bar menu__top">
+            <a href="#" class="icon icon--close"></a>
+
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#gallery">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#about-us">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#contacts">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+
+            <div class="menu__line"></div>
+
+            <div class="menu__content">
+              <p class="menu__content--title">Графік роботи</p>
+              <div class="menu__content--text">
+                <div class="menu__content--item">
+                  <strong>12:00 — 20:00</strong> середа<br>
+                  <strong>12:00 — 20:00</strong> четвер <br>
+                  <strong>12:00 — 20:00</strong> п’ятниця <br>
+                  <strong>11:00 — 19:00</strong> субота <br>
+                  <strong>11:00 — 19:00</strong> неділя
+                </div>
+
+                <div class="menu__content--item">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                      Каса припиняє роботу за 1 годину
+                      до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion Menu -->
+
+    <main>
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="section__title">Актуальні події</h2>
+
+          <article class="event events__item">
+            <div class="event__image">
+              <img src="./images/events/event_01.png" alt="event_01">
+            </div>
+
+            <div class="event__content">
+              <div class="event__description">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title">Йду і повертаюсь
+                <span></span>
+              </h3>
+              <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </article>
+
+          <article class="event events__item">
+            <div class="event__image">
+              <img src="./images/events/event_02.png" alt="event_02">
+            </div>
+
+            <div class="event__content">
+              <div class="event__description">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title">І спогади і мрії
+                <span></span>
+              </h3>
+              <p class="event__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </article>
+        </div>
+        <article class="lecture events__lecture">
+          <div class="lecture__image">
+            <img src="./images/lectures/lecture_01.png" alt="lecture_01">
+          </div>
+
+          <div class="lecture__content">
+            <div class="lecture__description">
+              <div class="lecture__name">ЛЕКЦІЯ</div>
+              <div class="lecture__date">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="lecture__title">Від класицизму до романтизму
+            </h3>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="section__title">Галерея</h2>
+
+          <div class="gallery__wrapper">
+            <div class="photos">
+              <div class="photos__row">
+                <a href="#" class="photos__link photos__link--square">
+                  <img
+                    src="./images/gallery/gallery_01.png"
+                    alt="gallery_01"
+                    class="photos__photo"
+                  >
+                </a>
+
+                <a href="#" class="photos__link photos__link--wide">
+                  <img
+                    src="./images/gallery/gallery_02.png"
+                    alt="gallery_02"
+                    class="photos__photo"
+                  >
+                </a>
+              </div>
+            </div>
+
+            <div class="photos">
+              <div class="photos__row">
+                <a href="#" class="photos__link photos__link--wide">
+                  <img
+                    src="./images/gallery/gallery_03.png"
+                    alt="gallery_03"
+                    class="photos__photo"
+                  >
+                </a>
+
+                <a href="#" class="photos__link photos__link--square">
+                  <img
+                    src="./images/gallery/gallery_04.png"
+                    alt="gallery_04"
+                    class="photos__photo"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- #region SLIDER -->
+
+          <div class="gallery__slider">
+            <div class="slider">
+              <div class="slider__item">
+                <img src="./images/gallery/slider_01.png" alt="slider_01">
+              </div>
+              <div class="slider__item">
+                <img src="./images/gallery/slider_02.png" alt="slider_02">
+              </div>
+              <div class="slider__item">
+                <img src="./images/gallery/slider_01.png" alt="slider_01">
+              </div>
+              <div class="slider__item">
+                <img src="./images/gallery/slider_02.png" alt="slider_02">
+              </div>
+            </div>
+          </div>
+
+          <!-- #endregion SLIDER -->
+        </div>
+      </section>
+
+      <section class="subscription">
+        <div class="subscription__inner container">
+          <div class="subscription__content">
+            <h2 class="section__title subscription__title">Підписка</h2>
+            <p class="subscription__desc">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form
+              class="subscription__form contact-form"
+              method="get"
+              action="/"
+              onsubmit="this.reset(); return false"
+            >
+              <label
+                class="contact-form__label"
+                for="email-input"
+              >
+                <input
+                  class="contact-form__input"
+                  type="email"
+                  name="email"
+                  id="email-input"
+                  placeholder="E-mail"
+                  required
+                >
+              </label>
+              <button class="contact-form__button" type="submit"></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+
+    <!-- #region -Footer  -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__icons">
+            <a href="#" class="footer__logo">NA <br> MU</a>
+
+            <div class="footer__social">
+              <a
+                class="icon icon--facebook"
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank">
+              </a>
+              <a
+              class="icon icon--instagram"
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__content" id="about-us">
+            <div class="footer__schedule">
+              <p class="footer__content--text">Графік роботи</p>
+              <p class="footer__content--text
+              footer__content--dist">
+                <strong>12:00 — 20:00</strong> середа<br>
+                <strong>12:00 — 20:00</strong> четвер <br>
+                <strong>12:00 — 20:00</strong> п’ятниця <br>
+                <strong>11:00 — 19:00</strong> субота <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+              <p class="footer__content--text">
+                <strong>Вихідні:</strong> понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+            <div class="footer__contacts" id="contacts">
+              <p class="footer__content--text">Контакти:</p>
+              <p class="footer__content--text footer__content--dist">
+                <a
+                  class="footer__content--link"
+                  href="https://goo.gl/maps/71HKWziUfWsWaSCL7"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <br><a class="footer__content--link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
+                <br><a class="footer__content--link" href="tel:+380442787454">факс +38 (044) 278-74-54</a>
+                <br><a class="footer__content--link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__line"></div>
+
+          <div class="footer__menu">
+            <div class="footer__menu--col1">
+              <a class="footer__menu--link" href="#gallery">Галерея</a>
+              <a class="footer__menu--link" href="#how-to-buy">Про Нас</a>
+            </div>
+            <div class="footer__menu--col2">
+              <a class="footer__menu--link" href="#events">Виставки та події</a>
+              <a class="footer__menu--link" href="#contacts">Контакти</a>
+            </div>
+          </div>
+
+          <div class="footer__copyright">
+            <div class="footer__copyright--item1">Copyright © 2019. All Rights Reserved.</div>
+            <div class="footer__copyright--item1">Designed by Zhyriada Marina</div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion Footer -->
+
+    <!-- Bak To Top -->
+    <div class="back-top">
+      <a href="back-top__link">
+        <img src="./images/icons/arrow-up.svg" alt="back-top">
+      </a>
+    </div>
+
+
+    <!-- SCRIPTS -->
+
+
   </body>
 </html>
