--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,9 @@
           <div class="header__left">
             <h3 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h3>
             <div class="header__left-button">
-              <img src="images/buy-tickets.svg" alt="buy tickets">
+              <a href="https://savelife.in.ua/donate/" target="_blank">
+                <img src="images/buy-tickets.svg" alt="buy tickets">
+              </a>
             </div>
             <div class="header__left-event">
               <span class="header__left-event-text" >ПОДІЇ</span>
@@ -47,27 +49,29 @@
     <aside class="page__menu menu" id="menu">
       <div class="menu__wrapper">
         <div class="menu__container">
-          <div class="top-bar menu__top">
-            <a href="#" class="icon icon--close"></a>
-          </div>
-          <div class="menu__bottom">
-            <nav class="nav menu__nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a href="#gallery" class="nav__link">Галерея</a>
-                </li>
-                <li class="nav__item">
-                  <a
-                  href="#events" class="nav__link">Виставки та  події</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#about_us" class="nav__link">Про Нас</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#contacts" class="nav__link">Контакти</a>
-                </li>
-              </ul>
-            </nav>
+          <div class="menu__wrapper-top">
+            <div class="top-bar menu__top">
+              <a href="#" class="icon icon--close"></a>
+            </div>
+            <div class="menu__bottom">
+              <nav class="nav menu__nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                    href="#events" class="nav__link">Виставки та  події</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#about_us" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
           </div>
           <div class="menu__schedule">
             <div class="menu-linear"></div>
@@ -172,7 +176,7 @@
             <div class="gallery-wrapper">
               <div class="gallery__photos slider">
                 <a
-                  href="#"
+                  href="!#photo"
                   class="gallery__link gallery__link--rectangle slide"
                   id="slide-1">
                   <img
@@ -182,7 +186,7 @@
                   >
                 </a>
                 <a
-                  href="#"
+                  href="!#photo"
                   class="gallery__link gallery__link--wide slide"
                   id="slide-2">
                   <img
@@ -191,14 +195,14 @@
                     alt="Range & Integrated lights"
                   >
                 </a>
-                <a href="#" class="gallery__link gallery__link--wide slide" id="slide-3">
+                <a href="!#photo" class="gallery__link gallery__link--wide slide" id="slide-3">
                   <img
                     class="gallery__photo"
                     src="images/gallery-3.png"
                     alt="Range & Integrated lights"
                   >
                 </a>
-                <a href="#" class="gallery__link gallery__link--square slide" id="slide-4">
+                <a href="#photo" class="gallery__link gallery__link--square slide" id="slide-4">
                   <img
                     class="gallery__photo"
                     src="images/gallery-4.png"
@@ -266,8 +270,13 @@
                   >
                 </a>
                 <div class="contacts__icons">
-                  <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="contacts__facebook icon icon--facebook"></a>
-                  <a href="https://www.instagram.com/namu.museum/" class="contacts__insta icon icon--instagram"></a>
+                  <a
+                    href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                    class="contacts__facebook icon icon--facebook"
+                    target="_blank"
+                  >
+                  </a>
+                  <a href="https://www.instagram.com/namu.museum/" class="contacts__insta icon icon--instagram" target="_blank"></a>
                 </div>
               </div>
 
