--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
               <img
                 src="./images/pictures/river.jpg"
                 alt="River picture.jpg"
-                class="article-exhibition__image"
+                class="article-exhibition__image image-animation"
               >
               <div class="article-exhibition event-description">
                 <div class="article-exhibition event-description--caption">
@@ -144,7 +144,7 @@
               <img
               src="./images/pictures/woman-peacock.jpg"
               alt="River picture.jpg"
-              class="article-exhibition__image"
+              class="article-exhibition__image image-animation"
               >
               <div class="article-exhibition event-description">
                 <div class="article-exhibition event-description--caption">
@@ -177,11 +177,11 @@
           <h2 class="section__title gallery--title">Галерея</h2>
           <article class="picture">
             <div class="wrapper">
-              <div class="picture__item picture--woman"></div>
-              <div class="picture__item picture--geese"></div>
-              <div class="picture__item picture--village"></div>
-              <div class="picture__item picture--park"></div>
-              <div class="picture__item picture--sea"></div>
+              <div class="picture__item picture--woman image-animation"></div>
+              <div class="picture__item picture--geese image-animation"></div>
+              <div class="picture__item picture--village right image-animation"></div>
+              <div class="picture__item picture--park image-animation"></div>
+              <div class="picture__item picture--sea right image-animation"></div>
             </div>
           </article>
         </section>
