Fixed anchor link

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <div class="header__content">
           <div class="header__top">
             <a href="#menu" class="icon icon--menu header__menu"></a>
-            <a href="/#" class="logo header__logo">
+            <a href="#" class="logo header__logo">
               <img
                 src="./images/logo.svg"
                 alt="NAMU Logo"
@@ -293,7 +293,7 @@
       <div class="container">
         <div class="footer__content">
           <div class="footer__top">
-            <a href="/#" class="footer__logo logo">
+            <a href="#" class="footer__logo logo">
               <img
                 src="./images/logo.svg"
                 alt="NAMU Logo"
@@ -381,7 +381,7 @@
           </div>
 
           <div class="footer__to-top">
-            <a href="#header" class="footer__button">
+            <a href="#" class="footer__button">
               <span class="icon icon--arrow-up footer__button--span"></span>
             </a>
           </div>
