--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="page__body">
 
-    <header class="header page__header" id="header">
+    <header class="header page__header" id="home">
       <div class="container">
         <div class="header__bg">
           <img
@@ -26,7 +26,7 @@
         <div class="header__content">
           <div class="header__top">
             <a href="#menu" class="icon icon--menu header__menu"></a>
-            <a href="#" class="logo header__logo">
+            <a href="#home" class="logo header__logo">
               <img
                 src="./images/logo.svg"
                 alt="NAMU Logo"
@@ -51,7 +51,7 @@
     <aside class="menu page__menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <a href="#" class="icon icon--close menu__close"></a>
+          <a href="#home" class="icon icon--close menu__close"></a>
           <div class="menu__item">
             <nav class="nav menu__nav">
               <ul class="nav__list">
@@ -293,7 +293,7 @@
       <div class="container">
         <div class="footer__content">
           <div class="footer__top">
-            <a href="#" class="footer__logo logo">
+            <a href="#home" class="footer__logo logo">
               <img
                 src="./images/logo.svg"
                 alt="NAMU Logo"
@@ -381,7 +381,7 @@
           </div>
 
           <div class="footer__to-top">
-            <a href="#" class="footer__button">
+            <a href="#home" class="footer__button">
               <span class="icon icon--arrow-up footer__button--span"></span>
             </a>
           </div>
