Fixed hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU Museum</title>
     <link
-      rel="shortcut icon"
-      href="./images/logo.svg"
+      rel="icon"
+      href="favicon.ico"
       type="image/x-icon"
     >
     <link rel="stylesheet" href="./styles/main.scss">
