--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
   </head>
   <body class="page__body">
+    <div class="background"></div>
     <header class="header">
       <div class="header__wraper">
         <div class="header__img">
@@ -140,7 +141,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="menu__background"></div> -->
       </section>
 
       <section class="section" id="event">
@@ -295,15 +295,16 @@
                 class="subscription__form"
                 id="myForm"
               >
-              <label for="email">
-                <input 
-                  class="subscription__email"
-                  autocomplete="email"
-                  type="email"
-                  required
-                  placeholder="E-mail"
-                >
-              </label>
+                <label for="email">
+                  <input 
+                    class="subscription__email"
+                    autocomplete="email"
+                    type="email"
+                    required
+                    placeholder="E-mail"
+                  >
+                </label>
+
                 <button
                   id="submit"
                   class="subscription__button">
