--- a/src/index.html
+++ b/src/index.html
@@ -400,7 +400,7 @@
     
                   <a
                     class="footer__text footer__text--hover"
-                    href="e-mail: info@namu.kiev.ua"
+                    href="mailto:info@namu.kiev.ua"
                   >
                     e-mail: info@namu.kiev.ua
                   </a>
