replaced b on strong, corrected scale, backgrounds and hover button

--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,16 @@
           <div class="header__main header__wrapper--main">
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-            <button type="submit" class="header__button">
+            <button 
+              type="submit" 
+              class="header__button" 
+              onclick="location.href='#events'"
+            >
               <p class="header__button--title">КВИТКИ</p>
-              <a href="#events">
-                <div class="header__button--arrow">
-                  <div class="header__button--arrow--img"></div>
-                </div>
-              </a>
+              
+              <div class="header__button--arrow">
+                <div class="header__button--arrow--img"></div>
+              </div>
             </button>
           </div>
         </div>
@@ -79,14 +82,14 @@
             <p class="menu__bottom--title nav__title">Графік роботи</p>
             <div class="menu__bottom--wrapper">
               <ul class="menu__bottom--list">
-                <li class="nav__time__link"><b class="nav__time__link--b">12:00 — 20:00</b> четвер</li>
-                <li class="nav__time__link"><b class="nav__time__link--b">12:00 — 20:00</b> п’ятниця</li>
-                <li class="nav__time__link"><b class="nav__time__link--b">12:00 — 20:00</b> середа</li>
-                <li class="nav__time__link"><b class="nav__time__link--b">11:00 — 19:00</b> субота</li>
-                <li class="nav__time__link"><b class="nav__time__link--b">11:00 — 19:00</b> неділя</li>
+                <li class="nav__time__link"><strong class="nav__time__link--b">12:00 — 20:00</strong> четвер</li>
+                <li class="nav__time__link"><strong class="nav__time__link--b">12:00 — 20:00</strong> п’ятниця</li>
+                <li class="nav__time__link"><strong class="nav__time__link--b">12:00 — 20:00</strong> середа</li>
+                <li class="nav__time__link"><strong class="nav__time__link--b">11:00 — 19:00</strong> субота</li>
+                <li class="nav__time__link"><strong class="nav__time__link--b">11:00 — 19:00</strong> неділя</li>
               </ul>
               <p class="menu__bottom--weekends nav__time__link">
-                <b class="nav__time__link--b">Вихідні</b>: понеділок, вівторок
+                <strong class="nav__time__link--b">Вихідні</strong>: понеділок, вівторок
                 Каса припиняє роботу за 1 годину
                 до закриття музею
               </p>
@@ -118,7 +121,7 @@
                 <p class="current-event__block--main-titled
                   main__section--titled
                 ">
-                  ВИСТАВКА <b class="main__section--titled-b">26.08-29.11.2019</b>
+                  ВИСТАВКА <strong class="main__section--titled-b">26.08-29.11.2019</strong>
                 </p>
 
                 <div class="current-event__block--main-flex">
@@ -150,7 +153,7 @@
                 <p class="current-event__block--main-titled
                   main__section--titled
                 ">
-                  ВИСТАВКА <b class="main__section--titled-b">26.08-29.11.2019</b>
+                  ВИСТАВКА <strong class="main__section--titled-b">26.08-29.11.2019</strong>
                 </p>
 
                 <div class="current-event__block--main-flex">
@@ -183,7 +186,7 @@
               <p class="current-events__footer--text-block--titled
                 main__section--titled
               ">
-                ЛЕКЦІЯ <b class="main__section--titled-b">26/08/2019 - 11:00</b>
+                ЛЕКЦІЯ <strong class="main__section--titled-b">26/08/2019 - 11:00</strong>
               </p>
               <h2 class="current-events__footer--text-block--title
                 main__section--title--block
@@ -307,11 +310,11 @@
               Графік роботи
             </p>
             <ul class="footer__work-time--time">
-              <li class="footer__work-time--link footer__description"><b class="footer__description--b">12:00 — 20:00</b> середа</li>
-              <li class="footer__work-time--link footer__description"><b class="footer__description--b">12:00 — 20:00</b> четвер</li>
-              <li class="footer__work-time--link footer__description"><b class="footer__description--b">12:00 — 20:00</b> п’ятниця</li>
-              <li class="footer__work-time--link footer__description"><b class="footer__description--b">11:00 — 19:00</b> субота</li>
-              <li class="footer__work-time--link footer__description"><b class="footer__description--b">11:00 — 19:00</b> неділя</li>
+              <li class="footer__work-time--link footer__description"><strong class="footer__description--b">12:00 — 20:00</strong> середа</li>
+              <li class="footer__work-time--link footer__description"><strong class="footer__description--b">12:00 — 20:00</strong> четвер</li>
+              <li class="footer__work-time--link footer__description"><strong class="footer__description--b">12:00 — 20:00</strong> п’ятниця</li>
+              <li class="footer__work-time--link footer__description"><strong class="footer__description--b">11:00 — 19:00</strong> субота</li>
+              <li class="footer__work-time--link footer__description"><strong class="footer__description--b">11:00 — 19:00</strong> неділя</li>
             </ul>
 
             <p class="footer__work-time--weekends footer__description">
