--- a/src/index.html
+++ b/src/index.html
@@ -334,21 +334,21 @@
                 class="footer__contacts--list--link"
               >
                 М. Грушевського, 6;
-                Київ, 01001
+                Київ, 01001 <br>
               </a>
               тел. 
               <a 
                 class="footer__contacts--list--link" 
                 href="tel:+38 (044) 278-13-57"
               >
-              +38 (044) 278-13-57
+              +38 (044) 278-13-57 <br>
               </a>
               факс 
               <a 
                 href="tel:+38 (044) 278-74-54" 
                 class="footer__contacts--list--link"
               >
-              +38 (044) 278-74-54
+              +38 (044) 278-74-54 <br>
               </a>
               e-mail: 
               <a 
