implement html structure and add images

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header"></header>
+    <main>
+      <section class="art-museum" id="museum"></section>
+      <section class="actual-events" id="events"></section>
+      <section class="history-block"></section>
+      <section class="gallery" id="gallery"></section>
+      <section class="subscribe" id="subscribe"></section>
+    </main>
+    <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
