--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,337 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.ico"
+    >
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;700&family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;700&family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="./scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <div class="header" id="home">
+      <div class="header__content">
+        <div class="navigation header__navigation">
+          <div class="navigation__container">
+            <div class="navigation__logo-container">
+              <a href="#menu" class="icons icons--menu ">
+              </a>
+              <a href="#" class="header__logo logo">
+                <img
+                  class="logo__image"
+                  src="images/logo.png"
+                  alt="Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="header__title-container">
+          <h1 class="header__title">
+            художній <br>
+            музей
+          </h1>
+          <div class="header__button button button--header">
+            квитки
+          </div>
+        </div>
+      </div>
+      <div class="header__logo-background"></div>
+    </div>
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__content">
+        <div class="menu__top-container">
+          <a href="#" class="icons icons--cross"></a>
+          <div class="menu__top-content">
+            <div class="menu__1">
+              <a
+                href="#galery"
+                class="menu__link"
+              >
+                Галерея
+              </a>
+              <a
+                href="#schedule"
+                class="menu__link"
+              >
+              Виставки та Події
+              </a>
+            </div>
+            <div class="menu__2">
+              <a
+                href="#actual"
+                class="menu__link"
+              >
+              Про Нас
+              </a>
+              <a
+                href="#contacts"
+                class="menu__link"
+              >
+                Контакти
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="menu__divider"></div>
+        <div class="menu__description" id="schedule">
+
+          <span class="menu__description-1">
+            Графік роботи<br><br>
+
+            12:00 — 20:00 середа<br>
+            12:00 — 20:00 четвер<br>
+            12:00 — 20:00 п’ятниця<br>
+            11:00 — 19:00 субота<br>
+            11:00 — 19:00 неділя<br>
+          </span>
+          <span class="menu__description-2">
+            Вихідні: понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </span>
+        </div>
+      </div>
+    </aside>
+
+    <main>
+      <section class="page__section page__section--actual actual" id="actual">
+        <div class="page__section-content">
+          <h2 class="page__section-title actual__title">
+            Актуальні події
+          </h2>
+          <div class="actual__photo-container">
+            <img
+              src="./images/actual1.png"
+              alt="Йду і повертаюсь"
+              class="actual__photo"
+            >
+          </div>
+
+          <div class="actual__text-container">
+            <div class="actual__text">
+              <span class="actual__text--upper">виставка</span>
+              <span class="actual__text--bold">
+                26.08-29.11.2019
+              </span>
+            </div>
+            <div class="actual__name-container">
+              <h3 class="actual__name">
+                Йду і повертаюсь
+              </h3>
+              <span class="actual__redSquare"></span>
+            </div>
+            <p class="actual__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+
+          <div class="actual__photo-container">
+            <img
+              src="./images/actual2.png"
+              alt="Йду і повертаюсь"
+              class="actual__photo"
+            >
+          </div>
+
+          <div class="actual__text-container">
+            <div class="actual__text">
+              <span class="actual__text--upper">виставка</span>
+              <span class="actual__text--bold">
+                26.08-29.11.2019
+              </span>
+            </div>
+            <div class="actual__name-container">
+              <h3 class="actual__name">
+                І спогади і мрії
+              </h3>
+              <span class="actual__redSquare"></span>
+            </div>
+            <p class="actual__description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+
+          <div class="actual__last">
+            <div class="actual__content">
+              <div class="actual__text actual__text--last">
+                <span class="actual__text--upper">
+                  лекція
+                </span>
+                <span class="actual__text--bold">
+                  26/08/2019 - 11:00
+                </span>
+              </div>
+              <div class="actual__name-container actual__name-container--last">
+                <h3 class="actual__name actual__name--last">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="actual__photo-container actual__photo-container--last">
+          <img
+            src="./images/actual3.png"
+            alt="Йду і повертаюсь"
+            class="actual__photo"
+          >
+        </div>
+      </section>
+
+      <section class="page__section galery" id="galery">
+        <div class="page__section-content">
+          <h2 class="page__section-title galery__title">
+            Галерея
+          </h2>
+          <div class="galery__slider">
+            <div class="slider">
+              <div class="slider__slides">
+                <div id="slide-1" class="slider__slide slider__slide--1">
+                  <img
+                  src="./images/galery1.png"
+                  alt="Галерея"
+                  class="galery__photo"
+                >
+                </div>
+                <div id="slide-2" class="slider__slide slider__slide--2">
+                  <img
+                    src="./images/galery2.png"
+                    alt="Галерея"
+                    class="galery__photo"
+                  >
+                </div>
+                <div id="slide-3" class="slider__slide slider__slide--3">
+                  <img
+                    src="./images/galery3.png"
+                    alt="Галерея"
+                    class="galery__photo"
+                  >
+                </div>
+                <div id="slide-4" class="slider__slide slider__slide--4">
+                  <img
+                    src="./images/galery4.png"
+                    alt="Галерея"
+                    class="galery__photo"
+                  >
+                </div>
+              </div>
+              <div class="slider__links">
+                <a href="#slide-1" class="slider__link"></a>
+                <a href="#slide-2" class="slider__link"></a>
+                <a href="#slide-3" class="slider__link"></a>
+                <a href="#slide-4" class="slider__link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section subscribe" id="subscribe">
+        <div class="page__section-content subscribe__content">
+          <div class="subscribe__title-container">
+            <h1 class="page__section-title subscribe__title">
+              Підписка
+            </h1>
+            <div class="subscribe__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </div>
+            <div class="subscribe__button button button--subscribe">
+              E-mail
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__logo-container">
+          <a href="#home" class="footer__logo logo">
+            <img
+              class="logo__image"
+              src="images/logo.png"
+              alt="Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv"
+            >
+          </a>
+          <div class="footer__social">
+            <a href="#" class="icons icons--social icons--fb"></a>
+            <a href="#" class="icons icons--social icons--instagram"></a>
+          </div>
+        </div>
+        <div class="footer__schedule">
+          Графік роботи
+          <br><br>
+          <span class="footer__schedule footer__schedule--heures">
+            12:00 — 20:00
+          </span> середа<br>
+          <span class="footer__schedule footer__schedule--heures">12:00 — 20:00</span>  четвер<br>
+          <span class="footer__schedule footer__schedule--heures">12:00 — 20:00</span> п’ятниця<br>
+          <span class="footer__schedule footer__schedule--heures">11:00 — 19:00</span> субота<br>
+          <span class="footer__schedule footer__schedule--heures">11:00 — 19:00</span> неділя
+          <br><br>
+          Вихідні понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </div>
+        <div class="footer__contacts" id="contacts">
+          Контакти:
+          <br><br>
+          вул. М. Грушевського, 6; Київ, 01001
+          <br>
+          тел. +38 (044) 278-13-57
+          <br>
+          факс +38 (044) 278-74-54
+          <br>
+          e-mail: info@namu.kiev.ua
+        </div>
+        <div class="footer__arrow-up">
+          <a href="#home" class="icons icons--arrow-up"></a>
+        </div>
+        <div class="footer__divider">
+        </div>
+        <div class="footer__menu-1">
+          <a
+            href="#galery"
+            class="menu__link menu__link--footer"
+          >
+            Галерея
+          </a>
+          <a
+            href="#schedule"
+            class="menu__link menu__link--footer"
+          >
+          Виставки та Події
+          </a>
+        </div>
+        <div class="footer__menu-2">
+          <a
+            href="#actual"
+            class="menu__link menu__link--footer"
+          >
+            Про Нас
+          </a>
+          <a
+            href="#contacts"
+            class="menu__link menu__link--footer"
+          >
+            Контакти
+          </a>
+        </div>
+        <div class="footer__rights">
+          <span class="footer__rights-1">Designed by Zhyriada Marina</span>
+          <span class="footer__rights-2">Copyright © 2019. All Rights Reserved.</span>
+        </div>
+      </div>
+
+    </footer>
   </body>
 </html>
