--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,56 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/icons/logo__small.png">
   </head>
   <body class="page__body">
-    <header class="header"></header>
+    <header class="header">
+      <div class="container">
+        <div class="header__top-action">
+          <a href="#menu__page" class="menu-button icon"></a>
+          <a href="#" class="header__main-logo icon"></a>
+        </div>
+      </div>
+    </header>
     <main>
-      <section class="art-museum" id="museum"></section>
-      <section class="actual-events" id="events"></section>
+      <div class="container">
+        <section class="art-museum" id="museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#" class="art-museum__button">
+            КВИТКИ
+            <div class="art-museum__button-arrow"></div>
+          </a>
+        </section>
+      </div>
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events-card">
+            <div class="events-card__image events-card__image-1"></div>
+            <div class="events-card__info">
+              <p class="events-card__type">ВИСТАВКА</p>
+              <p class="events-card__schedule">26.08-29.11.2019</p>
+            </div>
+            <h3 class="events-card__title">Йду і повертаюсь</h3>
+            <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+          </div>
+
+          <div class="events-card">
+            <div class="events-card__image events-card__image-2"></div>
+            <div class="events-card__info">
+              <p class="events-card__type">ВИСТАВКА</p>
+              <p class="events-card__schedule">26.08-29.11.2019</p>
+            </div>
+            <h3 class="events-card__title">І спогади і мрії</h3>
+            <div class="events-card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+          </div>
+        </div>
+      </section>
       <section class="history-block"></section>
       <section class="gallery" id="gallery"></section>
       <section class="subscribe" id="subscribe"></section>
