--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,18 @@
           </div>
         </div>
       </section>
-      <section class="history-block"></section>
+      <section class="lections">
+        <div class="lections__poster"></div>
+        <div class="container">
+          <div class="lections__info">
+            <div class="lections__info-wrapper">
+              <p class="lections__type">ЛЕКЦІЯ</p>
+              <p class="lections__schedule">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lections__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
       <section class="gallery" id="gallery"></section>
       <section class="subscribe" id="subscribe"></section>
     </main>
