--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,9 @@
           </a>
         </section>
       </div>
-      <section class="events" id="events">
-        <div class="container">
+      <div class="container">
+        <section class="events" id="events">
+
           <h2 class="events__title">Актуальні події</h2>
           <div class="events-card">
             <div class="events-card__image events-card__image-1"></div>
@@ -41,7 +42,7 @@
             <h3 class="events-card__title">Йду і повертаюсь</h3>
             <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
           </div>
-
+  
           <div class="events-card">
             <div class="events-card__image events-card__image-2"></div>
             <div class="events-card__info">
@@ -51,8 +52,8 @@
             <h3 class="events-card__title">І спогади і мрії</h3>
             <div class="events-card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
       <section class="lections">
         <div class="lections__poster"></div>
         <div class="container">
@@ -65,7 +66,9 @@
           </div>
         </div>
       </section>
-      <section class="gallery" id="gallery"></section>
+      <section class="gallery" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+      </section>
       <section class="subscribe" id="subscribe"></section>
     </main>
     <footer class="footer"></footer>
