Gallery issue question

--- a/src/index.html
+++ b/src/index.html
@@ -167,24 +167,20 @@
           </div>
         </div>
 
-        <div class="events__big event--3">
+        <div class="events__event event--3">
           <img
             src="/images/photos/03.jpg"
             alt="Від класицизму до романтизму"
             class="events__image--big"
           >
-          <div class="container">
-            <div class="events__big-block-container grid">
-              <div class="events__big-block grid__item--desktop-4-9 grid__item--tablet-1-4 grid__item--mobile-1-2">
-                <div class="events__description-flex events__description-flex--big">
-                  <p class="events__type">ЛЕКЦІЯ</p>
-                  <p class="events__dates">26/08/2019 - 11:00</p>
-                </div>
-                <h3 class="events__name--big">
-                  Від класицизму до романтизму
-                </h3>
-              </div>
+          <div class="events__big-block">
+            <div class="events__description-flex events__description-flex--big">
+              <p class="events__type">ЛЕКЦІЯ</p>
+              <p class="events__dates">26/08/2019 - 11:00</p>
             </div>
+            <h3 class="events__name--big">
+              Від класицизму до романтизму
+            </h3>
           </div>
         </div>
       </div>
@@ -192,7 +188,7 @@
       <div class="page__section gallery" id="gallery">
         <div class="container">
           <div class="grid grid--gallery">
-            <h2 class="grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2 page__title">
+            <h2 class="page__title grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2">
               Галерея
             </h2>
             <img
@@ -222,7 +218,7 @@
       <div class="page__section page__section--contacts contacts" id="contacts">
         <div class="container">
           <div class="grid">
-            <div class="contacts__block grid__item--desktop-4-9">
+            <div class="contacts__block grid__item--desktop-4-9 grid__item--tablet-2-4">
               <h2 class="page__title page__title--contacts">
                 Підписка
               </h2>
